--- a/YetAnotherRunner/YetAnotherRunner/App.config
+++ b/YetAnotherRunner/YetAnotherRunner/App.config
@@ -11,6 +11,7 @@
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
     <add key="file.basePath" value="c:\_Automation\Test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException"/>
   </appSettings>
 
   <runtime>
