--- a/YetAnotherRunner/YetAnotherRunner/YetAnotherRunner.csproj
+++ b/YetAnotherRunner/YetAnotherRunner/YetAnotherRunner.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\..\NUnit\nunitv2-2.6.3\bin\Debug\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
