--- a/YetAnotherRunner/YetAnotherRunner/YetAnotherRunner.csproj
+++ b/YetAnotherRunner/YetAnotherRunner/YetAnotherRunner.csproj
@@ -36,6 +36,9 @@
     <StartupObject>YetAnotherRunner.ProgramYAR</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="envdte, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
