Modified parser and function binder to support scenario level step class instances.

--- a/YetAnotherRunner/YetAnotherRunner/App.config
+++ b/YetAnotherRunner/YetAnotherRunner/App.config
@@ -5,12 +5,12 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
-    <add key="browser.plugins" value="c:\_Automation\Test\Plugins\Browsers\" />
+    <add key="browser.plugins" value="c:\_Automation\test_nunit_test\Plugins\Browsers\" />
     <add key="test.suites" value="all" />
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\Test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.basePath" value="c:\_Automation\test_nunit_test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException"/>
   </appSettings>
 
