--- a/YetAnotherRunner/YetAnotherRunner/App.config
+++ b/YetAnotherRunner/YetAnotherRunner/App.config
@@ -12,6 +12,8 @@
     <add key="file.testSuite" value="CustomerSite_suite.json" />
     <add key="file.basePath" value="c:\_Automation\test_nunit_test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException"/>
+    <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F"/>
+    <add key="killExplorer" value="taskill /IM iexplore.exe /F"/>
   </appSettings>
 
   <runtime>
