Log4net parser Executor.cs GlobaTestState Runner and YetAnotherRunner.csproj changes

--- a/YetAnotherRunner/YetAnotherRunner/App.config
+++ b/YetAnotherRunner/YetAnotherRunner/App.config
@@ -16,6 +16,11 @@
     <add key="killExplorer" value="taskill /IM iexplore.exe /F"/>
   </appSettings>
 
+  <connectionStrings>
+    <add name="PaySpan_JobSystem" connectionString="Data Source=agpjaxsrvd2db1;Initial Catalog=PaySpan_JobSystem;Integrated Security=True" providerName="System.Data.SqlClient " />
+    <add name="PaySpan_Security" connectionString="Data Source=agpjaxsrvd2db1;Initial Catalog=PaySpan_Security;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -24,6 +29,24 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
+      <param name="File" value="~/App_Data/log.txt" />
+      <param name="AppendToFile" value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%date [%thread] %-5level %logger [%C{1}.%M] - %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
 
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
