--- a/YetAnotherRunner/YetAnotherRunner/YetAnotherRunner.csproj
+++ b/YetAnotherRunner/YetAnotherRunner/YetAnotherRunner.csproj
@@ -66,7 +66,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TestPipe.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TestPipe.Core, Version=3.0.1.2, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\_TestPipe\source\application\TestPipe.Core\bin\Debug\TestPipe.Core.dll</HintPath>
     </Reference>
@@ -77,6 +77,10 @@
     <Reference Include="TestPipe.NPoco, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\_TestPipe\source\application\TestPipe.NPoco\bin\Debug\TestPipe.NPoco.dll</HintPath>
+    </Reference>
+    <Reference Include="TestPipe.Selenium, Version=3.0.1.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\test_nunit_test\Plugins\Browsers\TestPipe.Selenium.dll</HintPath>
     </Reference>
     <Reference Include="TestPipe.SpecFlow, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
