--- a/FPBRTest/App.config
+++ b/FPBRTest/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="browser.plugins" value="c:\_Automation\test_nunit_test\Plugins\Browsers\" />
+    <add key="browser.plugins" value="PluginPath" />
     <add key="test.suites" value="all" />
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
-    <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test_nunit_test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.testSuite" value="SuiteJasonFile" />
+    <add key="file.basePath" value="BasePath" />
   </appSettings>
 </configuration>
