--- a/Runner/Runner/App.config
+++ b/Runner/Runner/App.config
@@ -5,15 +5,13 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
-    <add key="browser.plugins" value="c:\_Automation\test_nunit_test\Plugins\Browsers\" />
+    <add key="browser.plugins" value="pulgin folder if any" />
     <add key="test.suites" value="all" />
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
-    <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test_nunit_test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.testSuite" value="XYZ.json" />
+    <add key="file.basePath" value="basePathToJson" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
-    <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
-    <add key="killExplorer" value="taskill /IM iexplore.exe /F" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
