changed test_nunit_test to test

--- a/Runner/Runner/App.config
+++ b/Runner/Runner/App.config
@@ -5,16 +5,17 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
-    <add key="browser.plugins" value="c:\_Automation\test_nunit_test\Plugins\Browsers\" />
+    <add key="browser.plugins" value="c:\_Automation\test\Plugins\Browsers\" />
     <add key="test.suites" value="all" />
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test_nunit_test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.basePath" value="c:\_Automation\test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
     <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
     <add key="killExplorer" value="taskill /IM iexplore.exe /F" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="log.path" value="C:\_Automation\test"/>
   </appSettings>
   <connectionStrings>
     <add name="PaySpan_JobSystem" connectionString="Data Source=agpjaxsrvd2db1;Initial Catalog=PaySpan_JobSystem;Integrated Security=True" providerName="System.Data.SqlClient " />
