--- a/Runner/Runner/Runner.csproj
+++ b/Runner/Runner/Runner.csproj
@@ -82,6 +82,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TestPipe.Common, Version=3.2.2.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\_TestPipe\source\application\TestPipe.Common\bin\Debug\TestPipe.Common.dll</HintPath>
+    </Reference>
     <Reference Include="TestPipe.Core, Version=3.0.1.2, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\_TestPipe\source\application\TestPipe.Core\bin\Debug\TestPipe.Core.dll</HintPath>
