--- a/source/application/Runner/packages.config
+++ b/source/application/Runner/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="TestPipe.Common" version="3.2.2.4" targetFramework="net451" />
   <package id="WebDriver.IEDriverServer.win32" version="2.44" targetFramework="net451" />
 </packages>
