--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -15,7 +15,7 @@
     <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
     <add key="killExplorer" value="taskill /IM iexplore.exe /F" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="log.path" value="C:\_Automation\test" />
+    <add key="log.path" value="..\..\..\..\..\Logs\Tarsvin.log.txt" />
   </appSettings>
   <connectionStrings>
     <add name="PaySpan_JobSystem" connectionString="Data Source=agpjaxsrvd2db1;Initial Catalog=PaySpan_JobSystem;Integrated Security=True" providerName="System.Data.SqlClient " />
