--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -10,12 +10,13 @@
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.basePath" value="c:\_Automation\test\source\application\CustomerSite.Specs\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
     <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
     <add key="killExplorer" value="taskill /IM iexplore.exe /F" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="log.path" value="C:\_Automation\test" />
+    <add key="tarsvin.test.projectnameprefix" value="" />
   </appSettings>
   <connectionStrings>
     <add name="PaySpan_JobSystem" connectionString="Data Source=agpjaxsrvd2db1;Initial Catalog=PaySpan_JobSystem;Integrated Security=True" providerName="System.Data.SqlClient " />
