--- a/source/application/Runner/Runner.csproj
+++ b/source/application/Runner/Runner.csproj
@@ -51,6 +51,9 @@
     <StartupObject>Runner.ProgramYAR</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine">
+      <HintPath>..\..\..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="envdte, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -103,14 +106,18 @@
     <Compile Include="GlobalTestStates.cs" />
     <Compile Include="IndividualFeatureTestState.cs" />
     <Compile Include="IndividualTestState.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="ProgramYAR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
+    <Compile Include="RunnerHelper.cs" />
     <Compile Include="Solution.cs" />
     <Compile Include="StepLoader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
