--- a/source/application/Runner/packages.config
+++ b/source/application/Runner/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="WebDriver.IEDriverServer.win32" version="2.44" targetFramework="net451" />
