--- a/source/test/FPBRTest/App.config
+++ b/source/test/FPBRTest/App.config
@@ -6,6 +6,6 @@
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.basePath" value="c:\_Automation\test\source\application\CustomerSite.Specs\Data\" />
   </appSettings>
 </configuration>
