--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -5,12 +5,12 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
-    <add key="browser.plugins" value="c:\_Automation\test\Plugins\Browsers\" />
+    <add key="browser.plugins" value="C:\_Tarsvin\source\test\Plugins\Browsers\" />
     <add key="test.suites" value="all" />
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test\source\application\CustomerSite.Specs\Data\" />
+    <add key="file.basePath" value="C:\_Automation\Test\source\application\CustomerSite.Specs\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
     <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
     <add key="killExplorer" value="taskill /IM iexplore.exe /F" />
