Added Required Option for running runner in as Sequential or parallel system. And changed runner accordingly to support for the type of run system.

--- a/source/application/Runner/Runner.csproj
+++ b/source/application/Runner/Runner.csproj
@@ -90,6 +90,7 @@
     <Compile Include="GlobalTestStates.cs" />
     <Compile Include="IndividualFeatureTestState.cs" />
     <Compile Include="IndividualTestState.cs" />
+    <Compile Include="Interfaces\IRunner.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="ProgramYAR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
