--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -12,6 +12,7 @@
     <add key="file.testSuite" value="CustomerSite_suite.json" />
     <add key="file.basePath" value="C:\_Automation\Test\source\application\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
+    <add key="TimeOut" value="TestPipe.Core.Exceptions.TestPipeTimeOutException"/>
     <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
     <add key="killExplorer" value="taskill /IM iexplore.exe /F" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
