--- a/source/application/Runner/Runner.csproj
+++ b/source/application/Runner/Runner.csproj
@@ -79,9 +79,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TestPipe.Common, Version=3.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TestPipe.Common, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.Common.3.2.3.0\lib\net451\TestPipe.Common.dll</HintPath>
+      <HintPath>..\..\..\packages\TestPipe.Common.3.2.4.0\lib\net451\TestPipe.Common.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +94,7 @@
     <Compile Include="Options.cs" />
     <Compile Include="ProgramYAR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReRunCase.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="RunnerHelper.cs" />
     <Compile Include="Solution.cs" />
