--- a/source/application/CustomAttributes/CustomAttributes.csproj
+++ b/source/application/CustomAttributes/CustomAttributes.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9202E856-3F34-47CE-AB99-B14EB8319E29}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CustomAttributes</RootNamespace>
-    <AssemblyName>CustomAttributes</AssemblyName>
+    <RootNamespace>Tarsvin.CustomAttributes</RootNamespace>
+    <AssemblyName>Tarsvin.CustomAttributes</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
