--- a/source/test/FPBRTest/FPBRTest.Specs.csproj
+++ b/source/test/FPBRTest/FPBRTest.Specs.csproj
@@ -123,13 +123,13 @@
       <Project>{9202e856-3f34-47ce-ab99-b14eb8319e29}</Project>
       <Name>CustomAttributes</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\application\Runner\Runner.csproj">
+    <ProjectReference Include="..\..\application\Runner\Tarsvin.Runner.csproj">
       <Project>{b55f8446-aad0-4c31-bddf-1cf8ea427f51}</Project>
-      <Name>Runner</Name>
+      <Name>Tarsvin.Runner</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\application\StepBuilder\StepBuilder.csproj">
+    <ProjectReference Include="..\..\application\StepBuilder\Tarsvin.StepBuilder.csproj">
       <Project>{3b70a0ed-5d3d-4c13-9c6c-c0cc5e26a85c}</Project>
-      <Name>StepBuilder</Name>
+      <Name>Tarsvin.StepBuilder</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
