Changed app config

--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -10,7 +10,7 @@
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
     <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="C:\_Automation\Test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.basePath" value="C:\_Automation\Test\source\application\Data\" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
     <add key="TimeOut" value="TestPipe.Core.Exceptions.TestPipeTimeOutException"/>
     <add key="killDriver" value="taskkill /IM IEDriverServer.exe /F" />
