--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -9,8 +9,8 @@
     <add key="test.suites" value="all" />
     <add key="test.features" value="all" />
     <add key="test.scenarios" value="all" />
-    <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="C:\_Automation\Test\source\application\SunGard.PNE.Test.CustomerSite.Specs\Data\" />
+    <add key="file.testSuite" value="JMS_suite.json" />
+    <add key="file.basePath" value="C:\_Automation\test\source\application\Data\" />
     <add key="log.path" value="..\..\..\..\..\Logs\Tarsvin.log.txt" />
     <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
     <add key="TimeOut" value="TestPipe.Core.Exceptions.TestPipeTimeOutException"/>
