--- a/source/test/RunnerHelper.Test/Runner.Test.Unit.csproj
+++ b/source/test/RunnerHelper.Test/Runner.Test.Unit.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Runner.Test.Unit.nuspec" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
