Implemented XML result Feature Changed indentation from spaces to tabs Changed result structure Removed unreferenced code.

--- a/source/application/Runner/App.config
+++ b/source/application/Runner/App.config
@@ -12,7 +12,7 @@
     <add key="file.testSuite" value="JMS_suite.json" />
     <add key="file.basePath" value="C:\_Automation\test\source\application\Data\" />
     <add key="log.path" value="..\..\..\..\..\Logs\Tarsvin.log.txt" />
-    <add key="IgnoreStackTrace" value="NUnit.Framework.AssertionException" />
+    <add key="IgnoreStackTrace" value="TestPipe.Assertions.StepAsserts" />
     <add key="TimeOut" value="TestPipe.Core.Exceptions.TestPipeTimeOutException"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="tarsvin.test.projectnameprefix" value="" />
