Adding build project. Adding namespace grouping unit test.

--- a/source/test/RunnerHelper.Test/Runner.Test.Unit.csproj
+++ b/source/test/RunnerHelper.Test/Runner.Test.Unit.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="RunnerHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NamespaceGroupingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\application\Runner\Tarsvin.Runner.csproj">
