Minor fixes in Tarsvin Parser and Enhancements in Tarsvin Runner

--- a/source/test/FPBRTest/packages.config
+++ b/source/test/FPBRTest/packages.config
@@ -1,19 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.1.1" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="Microsoft.SqlServer.Scripting" version="11.0.2100.61" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
-  <package id="Ninject.Extensions.Logging" version="3.2.1.0" targetFramework="net451" />
-  <package id="Ninject.Extensions.Logging.Log4net" version="3.2.1.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Logging" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Logging.Log4net" version="3.2.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
-  <package id="Selenium.Support" version="2.44.0" targetFramework="net451" />
-  <package id="Selenium.WebDriver" version="2.44.0" targetFramework="net451" />
+  <package id="Selenium.Support" version="2.42.0" targetFramework="net451" />
+  <package id="Selenium.WebDriver" version="2.42.0" targetFramework="net451" />
+  <package id="Selenium.WebDriver.IEDriver" version="2.48.0.0" targetFramework="net451" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net451" />
-  <package id="TestPipe.Assertions" version="3.2.4.0" targetFramework="net451" />
-  <package id="TestPipe.Common" version="3.2.4.0" targetFramework="net451" />
-  <package id="TestPipe.Core" version="3.2.4.0" targetFramework="net451" />
-  <package id="TestPipe.Plugins.Selenium" version="3.2.4.0" targetFramework="net451" />
-  <package id="TestPipe.Runner" version="3.2.4.0" targetFramework="net451" />
-  <package id="TestPipe.SpecFlow" version="3.2.4.0" targetFramework="net451" />
-  <package id="WebDriver.IEDriverServer.win32" version="2.44" targetFramework="net451" />
+  <package id="Tarsvin.CustomAttributes" version="1.1.0" targetFramework="net451" />
+  <package id="TestPipe.Assertions" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.Common" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.Core" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.Data" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.NPoco" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.Plugins.Selenium" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.Runner" version="3.4.0" targetFramework="net451" />
+  <package id="TestPipe.SpecFlow" version="3.4.0" targetFramework="net451" />
 </packages>
