--- a/source/test/FPBRTest/App.config
+++ b/source/test/FPBRTest/App.config
@@ -1,24 +1,59 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
-  </configSections>
-  <appSettings>
-    <add key="browser.plugins" value="c:\_Automation\test\Plugins\Browsers\" />
-    <add key="test.suites" value="all" />
-    <add key="test.features" value="all" />
-    <add key="test.scenarios" value="all" />
-    <add key="file.testSuite" value="CustomerSite_suite.json" />
-    <add key="file.basePath" value="c:\_Automation\test\source\application\CustomerSite.Specs\Data\" />
-  </appSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-<specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow></configuration>
+	<configSections>
+		
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+	<section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" /></configSections>
+	<appSettings>
+		<add key="browser.plugins" value="C:\_Automation\Tarsvin\source\test\FPBRTest\Plugins\Browsers\" />
+		<add key="videorecorder.plugins" value="C:\_Automation\Tarsvin\source\test\FPBRTest\Plugins\VideoRecorders\" />
+		<add key="test.suites" value="all" />
+		<add key="test.features" value="all" />
+		<add key="test.scenarios" value="all" />
+		<add key="file.testSuite" value="FPBRTest_suite.json" />
+		<add key="file.basePath" value="C:\_Automation\Tarsvin\source\test\FPBRTest\Data\" />
+		<add key="log.path" value="..\..\..\..\..\Logs\FPBRTest.Log.txt" />
+		<add key="failure" value="TestPipe.Assertions.StepAsserts" />
+		<add key="timeout" value="TestPipe.Core.Exceptions.TestPipeTimeOutException" />
+		<add key="isIdP" value="true" />
+	</appSettings>
+	<connectionStrings>
+		<add name="PaySpan_JobSystem" connectionString="Data Source=agpjaxsrvd1db2;Initial Catalog=PaySpan_JobSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="PaySpan_Security" connectionString="Data Source=agpjaxsrvd1db2;Initial Catalog=PaySpan_Security;Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<specFlow>
+		<unitTestProvider name="NUnit" />
+	<!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+	</startup>
+	<log4net>
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="LogFileAppender" />
+		</root>
+		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="~/App_Data/log.txt" />
+			<param name="AppendToFile" value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="10MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%date [%thread] %-5level %logger [%C{1}.%M] - %message%newline" />
+			</layout>
+		</appender>
+	</log4net>
+</configuration>
