--- a/source/test/FPBRTest/FPBRTest.Specs.csproj
+++ b/source/test/FPBRTest/FPBRTest.Specs.csproj
@@ -35,6 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4">
+      <HintPath>..\..\..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
@@ -46,17 +52,32 @@
     <Reference Include="Microsoft.Build.Tasks.v4.0" />
     <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.SqlServer.ConnectionInfo, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\..\packages\Microsoft.SqlServer.Scripting.11.0.2100.61\lib\Microsoft.SqlServer.ConnectionInfo.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Management.Sdk.Sfc, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\..\packages\Microsoft.SqlServer.Scripting.11.0.2100.61\lib\Microsoft.SqlServer.Management.Sdk.Sfc.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Smo, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\..\packages\Microsoft.SqlServer.Scripting.11.0.2100.61\lib\Microsoft.SqlServer.Smo.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\..\..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="Ninject.Extensions.Logging, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Ninject.Extensions.Logging.3.2.1.0\lib\net45-full\Ninject.Extensions.Logging.dll</HintPath>
+      <HintPath>..\..\..\packages\Ninject.Extensions.Logging.3.2.0.0\lib\net45-full\Ninject.Extensions.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Ninject.Extensions.Logging.Log4Net, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Ninject.Extensions.Logging.Log4net.3.2.1.0\lib\net45-full\Ninject.Extensions.Logging.Log4Net.dll</HintPath>
+      <HintPath>..\..\..\packages\Ninject.Extensions.Logging.Log4net.3.2.0.0\lib\net45-full\Ninject.Extensions.Logging.Log4Net.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
@@ -64,32 +85,49 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.XML" />
-    <Reference Include="TechTalk.SpecFlow">
+    <Reference Include="Tarsvin.CustomAttributes, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Tarsvin.CustomAttributes.1.1.0\lib\net451\Tarsvin.CustomAttributes.dll</HintPath>
+    </Reference>
+    <Reference Include="TechTalk.SpecFlow, Version=1.9.0.77, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\SpecFlow.1.9.0\lib\net35\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
-    <Reference Include="TestPipe.Assertions, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TestPipe.Assertions, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.Assertions.3.2.4.0\lib\net451\TestPipe.Assertions.dll</HintPath>
+      <HintPath>..\..\..\packages\TestPipe.Assertions.3.4.0\lib\net451\TestPipe.Assertions.dll</HintPath>
     </Reference>
-    <Reference Include="TestPipe.Common, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TestPipe.Common, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.Common.3.2.4.0\lib\net451\TestPipe.Common.dll</HintPath>
+      <HintPath>..\..\..\packages\TestPipe.Common.3.4.0\lib\net451\TestPipe.Common.dll</HintPath>
     </Reference>
-    <Reference Include="TestPipe.Core, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TestPipe.Core, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.Core.3.2.4.0\lib\net451\TestPipe.Core.dll</HintPath>
+      <HintPath>..\..\..\packages\TestPipe.Core.3.4.0\lib\net451\TestPipe.Core.dll</HintPath>
     </Reference>
-    <Reference Include="TestPipe.Runner, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.Runner.3.2.4.0\lib\net451\TestPipe.Runner.dll</HintPath>
+    <Reference Include="TestPipe.Data">
+      <HintPath>..\..\..\packages\TestPipe.Data.3.4.0\lib\net451\TestPipe.Data.dll</HintPath>
     </Reference>
-    <Reference Include="TestPipe.Selenium, Version=3.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.Plugins.Selenium.3.2.3.0\content\Plugins\Browsers\TestPipe.Selenium.dll</HintPath>
+    <Reference Include="TestPipe.NPoco">
+      <HintPath>..\..\..\packages\TestPipe.NPoco.3.4.0\lib\net451\TestPipe.NPoco.dll</HintPath>
     </Reference>
-    <Reference Include="TestPipe.SpecFlow, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="TestPipe.Runner, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\TestPipe.SpecFlow.3.2.4.0\lib\net451\TestPipe.SpecFlow.dll</HintPath>
+      <HintPath>..\..\..\packages\TestPipe.Runner.3.4.0\lib\net451\TestPipe.Runner.dll</HintPath>
+    </Reference>
+    <Reference Include="TestPipe.Selenium, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\TestPipe.Plugins.Selenium.3.4.0\lib\net451\TestPipe.Selenium.dll</HintPath>
+    </Reference>
+    <Reference Include="TestPipe.SpecFlow, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\TestPipe.SpecFlow.3.4.0\lib\net451\TestPipe.SpecFlow.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver">
+      <HintPath>..\..\..\packages\Selenium.WebDriver.2.42.0\lib\net40\WebDriver.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver.Support">
+      <HintPath>..\..\..\packages\Selenium.Support.2.42.0\lib\net40\WebDriver.Support.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Choose>
@@ -120,10 +158,6 @@
     <Compile Include="Steps\StepHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\application\CustomAttributes\CustomAttributes.csproj">
-      <Project>{9202e856-3f34-47ce-ab99-b14eb8319e29}</Project>
-      <Name>CustomAttributes</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\application\Runner\Tarsvin.Runner.csproj">
       <Project>{b55f8446-aad0-4c31-bddf-1cf8ea427f51}</Project>
       <Name>Tarsvin.Runner</Name>
@@ -165,11 +199,15 @@
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <Content Include="..\..\..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.Net4.dll">
+      <Link>AutoMapper.Net4.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="..\..\..\packages\WebDriver.IEDriverServer.win32.2.44\content\IEDriverServer.exe">
       <Link>IEDriverServer.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Plugins\Browsers\TestPipe.Selenium.dll" />
+    <Content Include="License.txt" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
