--- a/source/application/Runner/Tarsvin.Runner.csproj
+++ b/source/application/Runner/Tarsvin.Runner.csproj
@@ -71,10 +71,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tarsvin.StepBuilder, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Tarsvin.StepBuilder.1.1.0\lib\net451\Tarsvin.StepBuilder.dll</HintPath>
-    </Reference>
     <Reference Include="TestPipe.Common, Version=3.2.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\TestPipe.Common.3.2.4.0\lib\net451\TestPipe.Common.dll</HintPath>
@@ -130,6 +126,12 @@
       <Link>IEDriverServer.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StepBuilder\Tarsvin.StepBuilder.csproj">
+      <Project>{3b70a0ed-5d3d-4c13-9c6c-c0cc5e26a85c}</Project>
+      <Name>Tarsvin.StepBuilder</Name>
+    </ProjectReference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
